version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/MeshWorkflowStepGroup.rst.txt
.. vale off



:class:`MeshWorkflowStepGroup`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.MeshWorkflowStepGroup(internalObject: Any)
              MeshWorkflowStepGroup(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Object that wraps IDSEngineeringModelWorkflow.
















   ..
       !! processed by numpydoc !!







.. py:currentmodule:: MeshWorkflowStepGroup

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetIMInfoByWorkflow`
            - GetIMInfoByWorkflow method.
          * - :py:attr:`~GetMeshWorkflowsControlPropertyList`
            - GetMeshWorkflowsControlPropertyList method.
          * - :py:attr:`~GetMeshWorkflowsOperationPropertyList`
            - GetMeshWorkflowsOperationPropertyList method.
          * - :py:attr:`~GetMeshWorkflowsOutcomePropertyList`
            - GetMeshWorkflowsOutcomePropertyList method.
          * - :py:attr:`~GetMeshWorkflowsPropertyList`
            - GetMeshWorkflowsPropertyList method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddSettings`
            - Add the settings of the input SettingsType to the Steps node.
          * - :py:attr:`~AddStep`
            - Add another operation to the sequence of steps to be executed for the mesh workflow.
          * - :py:attr:`~CanCheckPublicStateCallbackForIM`
            - CanCheckPublicStateCallbackForIM method.
          * - :py:attr:`~CanShowPublishStateIM`
            - CanShowPublishStateIM method.
          * - :py:attr:`~ConvertWorkflow`
            - Converts the workflow type to Custom
          * - :py:attr:`~CopyAttachmentPathToClipboard`
            - Copies the current attachment path to clipboard.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~DeleteAllStepsAndClearGeneratedData`
            - Deletes all steps and reset workflow type to undefined and also resets all inactive geometry parts/bodies to active again, clears the output data, and resets the state of the child objects (“Input”, “Steps”, “Output”) to the initial state. However, any user-defined settings such as the “Input” node scoping are retained.
          * - :py:attr:`~DeleteSettings`
            - Delete the settings of the input SettingsType from the Steps node. All the Settings specific entries are removed automatically to the Steps details.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~ExecuteAllSteps`
            - Executes all steps defined under the “StepGroup” object (which is the “Steps” node in the UI).
          * - :py:attr:`~ExecuteNextStep`
            - Executes the next step, i.e. the next operation which is ready to be executed under the parent “StepGroup” object.
          * - :py:attr:`~ExecuteUpToStep`
            - Executes any not yet ready steps up to and including the specified step.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetDomainBrowserAvailableScopes`
            - GetDomainBrowserAvailableScopes method.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetIncrementalMeshingInfo`
            - GetIncrementalMeshingInfo method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetUnpublishedList`
            - GetUnpublishedList method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropagateSettings`
            - Propagate the settings of the input SettingsType to the attributes of the Step nodes. The meshing attributes of the Step nodes will then be automatically defined based on the physical parameters of the settings. Otherwise, the meshing attributes need to be manually specified.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~PublishIMProp`
            - PublishIMProp method.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnType`
            - Renames applying the default name based on type.
          * - :py:attr:`~RevertToStep`
            - Revert to the specified step; if no checkpoint is available, then an exception will be raised.
          * - :py:attr:`~SetPropertyValue`
            - SetPropertyValue method.
          * - :py:attr:`~SetPublish`
            - SetPublish method.
          * - :py:attr:`~SetUnpublish`
            - SetUnpublish method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AnalysisFrequency`
            - Defines the analysis frequency of the acoustic scenario.
          * - :py:attr:`~Attachment`
            - 
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~MeshSize`
            - Defines the mesh size of the acoustic scenario based on the wave velocity and the frequency.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NumberOfAcousticLayers`
            - Gets the number of layers in the acoustic region. This value is determined based on whether quadratic elements are enabled (see ).
          * - :py:attr:`~NumberOfCores`
            - Defines how many CPU cores to be used in an operation (if supported by the operation).
          * - :py:attr:`~NumberOfPMLs`
            - Gets the number of layers in the perfectly meshed layers region. This value is determined based on whether quadratic elements are enabled (see ).
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~QuadraticElements`
            - Defines if the quadratic elements are used for the mesh generation.
          * - :py:attr:`~SpeedOfSound`
            - Defines the speed of sound in the acoustic scenario.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~WorkflowString`
            - Gets the WorkflowString.







Property detail
---------------
.. py:property:: AnalysisFrequency
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Defines the analysis frequency of the acoustic scenario.
















   ..
       !! processed by numpydoc !!

.. py:property:: Attachment
   :type: Optional[str]


.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelWorkflowAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshSize
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Defines the mesh size of the acoustic scenario based on the wave velocity and the frequency.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfAcousticLayers
   :type: Optional[int]


   
   Gets the number of layers in the acoustic region. This value is determined based on whether quadratic elements are enabled (see ).
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfCores
   :type: Optional[int]


   
   Defines how many CPU cores to be used in an operation (if supported by the operation).
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfPMLs
   :type: Optional[int]


   
   Gets the number of layers in the perfectly meshed layers region. This value is determined based on whether quadratic elements are enabled (see ).
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: QuadraticElements
   :type: Optional[bool]


   
   Defines if the quadratic elements are used for the mesh generation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpeedOfSound
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Defines the speed of sound in the acoustic scenario.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: WorkflowString
   :type: Optional[str]


   
   Gets the WorkflowString.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddSettings(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SettingsType) -> None

   
   Add the settings of the input SettingsType to the Steps node.

   ..
       !! processed by numpydoc !!

.. py:method:: AddStep(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.OperationType) -> Ansys.ACT.Automation.Mechanical.MeshWorkflowStep

   
   Add another operation to the sequence of steps to be executed for the mesh workflow.

   ..
       !! processed by numpydoc !!

.. py:method:: CanCheckPublicStateCallbackForIM() -> bool

   
   CanCheckPublicStateCallbackForIM method.

   ..
       !! processed by numpydoc !!

.. py:method:: CanShowPublishStateIM() -> bool

   
   CanShowPublishStateIM method.

   ..
       !! processed by numpydoc !!

.. py:method:: ConvertWorkflow(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.WorkflowType) -> None

   
   Converts the workflow type to Custom

   ..
       !! processed by numpydoc !!

.. py:method:: CopyAttachmentPathToClipboard() -> None

   
   Copies the current attachment path to clipboard.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteAllStepsAndClearGeneratedData() -> None

   
   Deletes all steps and reset workflow type to undefined and also resets all inactive geometry parts/bodies to active again, clears the output data, and resets the state of the child objects (“Input”, “Steps”, “Output”) to the initial state. However, any user-defined settings such as the “Input” node scoping are retained.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteSettings(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SettingsType) -> None

   
   Delete the settings of the input SettingsType from the Steps node. All the Settings specific entries are removed automatically to the Steps details.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: ExecuteAllSteps() -> None

   
   Executes all steps defined under the “StepGroup” object (which is the “Steps” node in the UI). 

   ..
       !! processed by numpydoc !!

.. py:method:: ExecuteNextStep() -> None

   
   Executes the next step, i.e. the next operation which is ready to be executed under the parent “StepGroup” object.

   ..
       !! processed by numpydoc !!

.. py:method:: ExecuteUpToStep(arg: Any) -> None

   
   Executes any not yet ready steps up to and including the specified step.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDomainBrowserAvailableScopes() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetDomainBrowserAvailableScopes method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIMInfoByWorkflow(workflow: Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelWorkflowAuto, result: List[System.Collections.Generic.Dictionary[str, Any]]) -> None
   :classmethod:


   
   GetIMInfoByWorkflow method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIncrementalMeshingInfo() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetIncrementalMeshingInfo method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshWorkflowsControlPropertyList(control: Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelControlAuto, pathBase: str, result: List[System.Collections.Generic.Dictionary[str, Any]], filter: bool, filterUnpublishedProps: bool, filterPropertyNames: List[str]) -> None
   :classmethod:


   
   GetMeshWorkflowsControlPropertyList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshWorkflowsOperationPropertyList(operation: Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelOperationAuto, pathBase: str, result: List[System.Collections.Generic.Dictionary[str, Any]], filter: bool, filterUnpublishedProps: bool, filterPropertyNames: List[str]) -> None
   :classmethod:


   
   GetMeshWorkflowsOperationPropertyList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshWorkflowsOutcomePropertyList(outcome: Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelOutcomeAuto, pathBase: str, result: List[System.Collections.Generic.Dictionary[str, Any]], filter: bool, filterUnpublishedProps: bool, filterPropertyNames: List[str]) -> None
   :classmethod:


   
   GetMeshWorkflowsOutcomePropertyList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetMeshWorkflowsPropertyList(workflow: Ansys.Common.Interop.DSObjectsAuto.IDSEngineeringModelWorkflowAuto, result: List[System.Collections.Generic.Dictionary[str, Any]], filter: bool, filterUnpublished: bool, filterPropertyNames: List[str]) -> None
   :classmethod:


   
   GetMeshWorkflowsPropertyList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(id: int) -> str
               GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetUnpublishedList() -> List[System.Collections.Generic.Dictionary[str, Any]]

   
   GetUnpublishedList method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropagateSettings(type: Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.SettingsType) -> None

   
   Propagate the settings of the input SettingsType to the attributes of the Step nodes. The meshing attributes of the Step nodes will then be automatically defined based on the physical parameters of the settings. Otherwise, the meshing attributes need to be manually specified.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: PublishIMProp() -> None

   
   PublishIMProp method.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnType() -> None

   
   Renames applying the default name based on type.

   ..
       !! processed by numpydoc !!

.. py:method:: RevertToStep(arg: Any) -> None

   
   Revert to the specified step; if no checkpoint is available, then an exception will be raised.

   ..
       !! processed by numpydoc !!

.. py:method:: SetPropertyValue(id: int, value: str, validate: int) -> None

   
   SetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetPublish(id: int) -> None

   
   SetPublish method.

   ..
       !! processed by numpydoc !!

.. py:method:: SetUnpublish(id: int) -> None

   
   SetUnpublish method.

   ..
       !! processed by numpydoc !!



.. vale on